feat: added created add to models and fix the sales bug
